# meats

./: .gitignore  pyproject.toml  trudne.txt
DTP/: all_excels_to_csv.sh  autocrop.py  bibtex_cite_refs.py  count_pdf_pages_in_cwd.sh  decrypt_pdf.sh  epub_info.py  extract_flate_streams_pdf.py  extract_pdf_images.sh  extract_pdf_metadata.sh  find_small_blobs.py  generate_calendar.sh  generate_page_numbers_pdf.py  generate_text.py  gs_strip_fonts.sh  images_to_pdf.py  jbig2_recompress_img_pdf.sh  join_pdfs.py  join_pdfs.sh  jupyter_execute_inplace.sh  jupyter_show_as_slides.sh  label_queries.sql  latex_highligh_best_2nd.py  lstm_seq2seq.py  man2pdf.sh  mbart_translate.py  mogrify_photocopy.sh  overlap_replace.ipynb  page-number.sh  pdf3.py  pdf_cat_pages.py  pdf_decrypt.sh  pdf_encrypt.sh  pdf_extract_flate_streams.py  pdf_extract_images.sh  pdf_grep.sh  pdf_join.py  pdf_to_brochure.sh  pdfgrep.py  pdftex.sh  pdftotext.py  (+18 more)
Demote/: Demote.sln
MuiPageGen/: example.nsi  mui_page_gen.py
Qt_meats/: .gitignore
configs/: .ExifTool_config  .Xmodmap  .bash_aliases  .vimrc  .zshrc  F12_time.sh  GenerateInspectionComments.ipynb  PycharmDisabledInspections.xml  README  _emacs  _gitconfig  _tmux.conf  _vimrc  _wgetrc  aliases.sh  dotfile_install.py  gitconfig  pycharm_inspection_comments.txt
dates/: all_jpeg_dates.sh  clipboard_date_replace.py  date_avi.py  date_exiftool.sh  date_jpg.py  date_mov.py  date_split.py  delete_small_images.py  ending_stats.py  exif_rename.sh  extract_jpegs.py  find_faces.py  find_mvhd.py  image_size_stats.py  jfif_markers.py  jpeg_orientation.py  jpeg_quality.sh  jpeg_quantization.py  jpeg_quantization.sh  movdate.py  mp3_duration.py  mts_exif_rename.sh  parallel2webp.sh  pic_group.py  print_icalendar_events.py  qtscan3.c  reformat_dates.py  rename_avi.py  rename_files_mtime.py  rename_folders.py  rename_images.py  rename_invoice.py  rename_jpg.py  rename_mov.py  rename_paragon_scan.py  rename_videos.py  video_duration_ffprobe.py  view_jpegs_jp2a.sh
defunct/: .gitconfig  PyPDF2_cat_pages.py  dig_mdns.py  emwin_bmp_decoder.py  http-serve.sh  hyperv-off.bat  hyperv-on.bat  mkurl.py  rucksack.py  test_yad2k_speed.py  tiff_examples.py  unwnzip.pl  webcam_ocv.py  wishlist.pl  xargs_cat.py  xrandr_fit.py
dirr/: dirr.py
diskindex/: .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  scanner.py
diskindex/src/diskindex/: __init__.py  config.py  database.py  main.py  models.py  patterns.py  scanner.py
diskindex/src/diskindex/web/: __init__.py  app.py
diskindex/src/diskindex/web/templates/: _pagination.html  directory.html  directory_delete_summary.html  directory_duplicates.html  duplicates.html  index.html  layout.html  patterns.html  scan_detail.html  scans.html  search.html
dopar/: README.md  dopar  dopar.py  dopar2.py  encpar.py  to_path.sh
fixc/: README.md  bits.py  camera_registers.py  file2array.sh  fix_nbsp_to_space.sh  fixc_includes.py  fixc_xxrem.py  show_shared_libraries.sh  trailing_whitespace.py  yaml_key_val_join.py
gimpscm/: snap.scm
hamster/: channel_info.py  clipboard_monitor.py  cropwatch.py  dl_yt.py  dl_yt_au.py  e.py  escape_sh.py  extract_har.py  ff_ver_pattern.py  ff_versions.json  fibbench.py  g.py  get_playlist.sh  get_playlist_mp3.sh  get_thumbnails.sh  gramtification.py  hamster.py  hamster3.py  last_hour.py  members.py  mkdir.sh  mount.sh  pip_console.py  pip_shell.py  print_links.py  qr_img.py  reddit_urls.py  replace_links.py  screenshot_images.py  svnup.py  tts_test.py  umount.sh  uninstall.sh  video_info.py  viewstreet.py  wget_mirror.sh  writable_dirs.py  yt_play_mpv.sh  yt_resume.py  zipcrack.py
htmltest/: Makefile  htm.cpp  htm.l  selfclose.py
installer/: DTP-wishlist.sh  add_me_to_docker.sh  add_virtualenv_to_kernelspecs.sh  archivemount_manjaro.sh  build_ffmpeg.sh  chromium-flash.sh  compression-wishlist.sh  couchdb_debian_ubuntu.sh  create_conda_bat.bat  deepfilternet_tool.sh  desktop-fun-wishlist.sh  desktop-wishlist.sh  docker_bash.sh  docker_cuda_test.sh  docker_pyspark.sh  docker_rabbitmq.sh  dotnet.sh  fix_citrix_ssl.sh  fun-wishlist.sh  gitlab_runner.sh  gitlab_runner_docker.sh  gui-pro-wishlist.sh  install-gcc5-for-cuda91.sh  install-gcc6-for-cuda.sh  install-k3d.sh  install.pl  ipython_docker.sh  jupyter_contrib_nbextensions_user.sh.bat  jupyterlab_matplotlib.sh.bat  k3d-install.cmd  k3d-install.sh  k3d-refresh.cmd  k3d-refresh.sh  k3d_notebook.sh.bat  luddite_update_requirements.py  markdown-pdf.sh  mono_devel.sh  nginx_reverse_proxy.py  (+14 more)
lang_lawyer/cmake/find_png_jpg/: CMakeLists.txt
media/demucs-cli/: pyproject.toml
media/demucs-cli/src/demucs_cli/: main.py
pvicig/: GST.c  Makefile.am  Makefile.in  asprintf.c  astring.c  astring.h  atom.c  atom.h  atom_codes.c  atom_codes.h  atom_extractor.c  atom_extractor.l  atomizer_banal.c  atomizer_banal.l  atomizer_c.c  atomizer_c.l  atomizer_pascal.c  atomizer_pascal.l  comparison.c  comparison.h  compat.h  configure  main.c  main.h  metrics.h  preprocess.c  program.c  program.h  trim_directives.c  unique_dictionary.c  unique_dictionary.h
pvicig/examples/: mult.c  poker.c
pvicig/examples/0_seria/: algi.pas  algi0.c  algi1.c
pvicig/examples/1_seria/: eksperyment1.txt  eksperyment2.txt  eksperyment3.txt
pvicig/examples/2_seria/: eksperyment4.txt  eksperyment5.txt  eksperyment6.txt  poker00000.c  poker00001.c  poker00010.c  poker00011.c  wyniki4.tex  wyniki4.txt  wyniki5.tex  wyniki5.txt  wyniki6.tex  wyniki6.txt
pvicig/locale/en/LC_MESSAGES/: pvicig.mo  pvicig.po
pvicig/locale/pl/LC_MESSAGES/: pvicig.mo
(+1340 files in other folders)
