[tool.poetry]
name = "meats"
version = "0.1.0"
description = "My earthy ad-hoc tools 2.0"
authors = ["tgandor <tomasz.gandor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0"
scikit-image = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
