[tool.poetry]
name = "meats"
version = "0.2.0"
description = "My earthy ad-hoc tools 2.0"
authors = ["tgandor <tomasz.gandor@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
opencv-python = "^4.11.0"
scikit-image = "^0.25.0"
pypdf = "^5.3.0"
reportlab = "^4.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
