[tool.poetry]
name = "meats"
version = "0.2.0"
description = "My earthy ad-hoc tools 2.0"
authors = ["tgandor <tomasz.gandor@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
opencv-python = "^4.11.0"
scikit-image = "^0.25.0"
pypdf = "^6.6.2"
reportlab = "^4.3.1"
matplotlib = "^3.10.3"
natsort = "^8.4.0"
piexif = "^1.1.3"
imagesize = "^1.4.1"
pyperclip = "^1.9.0"
pycosat = "^0.6.6"
tqdm = "^4.67.1"
pywin32 = {markers = "platform_system == \"Windows\"", version = "^311"}
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
